# afumaturi-windows

./: .env.example  .gitattributes  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
scripts/: release-android.ps1  release-windows.ps1
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BulkStockImportModal.tsx  Calculator.tsx  Dashboard.tsx  ExpensesManager.tsx  Header.tsx  HelpCenter.tsx  HistoricalAnalytics.tsx  PartiesManager.tsx  ProductReturnModal.tsx  ProductSalesManager.tsx  ProductionDashboard.tsx  ProductionJobsManager.tsx  ProductsManager.tsx  RawMaterialsManager.tsx  RecipesManager.tsx  ReportsManager.tsx  SpicesManager.tsx  StaffManager.tsx  UpdateButton.tsx
src/config/: api.ts
src/data/: mockData.ts
src/services/: apiClient.ts  desktopApi.ts
src/utils/: calculations.ts
