[package]
name = "afumaturi-windows"
version = "0.2.2"
description = "Aplicatia desktop Afumaturi"
authors = ["Afumaturi"]
edition = "2021"

[lib]
name = "afumaturi_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
